# django-vendor-promo

./: README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.old.py  setup.py
.github/workflows/: vendorpromo_ci.yml  vendorpromo_develop.yml
develop/core/: admin.py  models.py  urls.py  views.py
develop/core/migrations/: 0001_initial.py  0002_auto_20210513_1740.py  0002_auto_20210514_0049.py
develop/develop/: settings.py  urls.py
develop/fixtures/: developer.json  unit_test.json
develop/templates/: base.html
docs/: conf.py  index.rst
docs/modules/: models.rst  views.rst
src/vendorpromo/: admin.py  config.py  forms.py  integrations.py  mixins.py  models.py  urls.py  utils.py  views.py
src/vendorpromo/migrations/: 0002_affiliate.py  0002_affiliate_couponcode_promotionalcampaign.py  0003_auto_20230524_1701.py  0004_affiliate_name_type.py  0005_alter_couponcode_code.py
src/vendorpromo/processors/: DummyProcessor.py  base.py  stripe.py  vouchery.py
src/vendorpromo/tests/: test_affiliate.py  test_api.py  test_coupon_code.py  test_processor.py  test_promotional_campaign.py  test_stripe.py
vendorpromo/: admin.py  apps.py  config.py  forms.py  models.py  urls.py  utils.py  views.py
vendorpromo/api/: seriealizers.py  urls.py  views.py
vendorpromo/api/v1/: urls.py  views.py
vendorpromo/apis/v1/: urls.py  views.py
vendorpromo/migrations/: 0001_initial.py  0002_auto_20210513_1743.py
vendorpromo/processors/: __init__.py  base.py  vouchery.py
vendorpromo/templates/vendorpromo/: base.html  processor_site_config_list.html  promo.html  promo_list.html  vouchery_detail.html  (+2 more)
vendorpromo/tests/: test_api.py  test_processor.py  test_promo.py
(+21 files in other folders)
